# cppcon_2024_cost_cpp_abstractions

./: .gitignore  README.md  setup.sh
docker/: Dockerfile  build_container.ps1  run_dev_container.ps1
documents/: linker_script.md  makefile.md
hardware/: hardware.kicad_pcb  hardware.kicad_pro  hardware.kicad_sch
hardware/gerber/: hardware-B_Cu.gbr  hardware-B_Mask.gbr  hardware-B_Paste.gbr  hardware-B_Silkscreen.gbr  hardware-Edge_Cuts.gbr  hardware-F_Cu.gbr  hardware-F_Mask.gbr  hardware-F_Paste.gbr  hardware-F_Silkscreen.gbr  hardware-In1_Cu.gbr  hardware-In2_Cu.gbr  hardware-NPTH.drl  hardware-PTH.drl  hardware-job.gbrjob
playground/: linker_script.ld
playground/benchmark/: benchmark.sh
playground/c_blink_led/: linker_script.ld  main.c  makefile
playground/c_example/: 01_hal.c  startup.s
playground/c_examples/: main.c  makefile
playground/cpp_blink_led/: led.hpp  main.cpp  makefile
playground/cpp_example/: 04_inheritance.cpp  05_runtime_polymorphism.cpp  06_static_polymorphism.cpp  08_floating_point.cpp  10_no_dynamic_memory.cpp  makefile
playground/cpp_examples/: 01_optimization.cpp  02_encapsulation_static.cpp  07_code_bloat.cpp  10_no_dynamic_memory.cpp  main.cpp
presentation/: cppcon.pptx  rejected.xcf
project/: compress.sh  generate.sh  process_svd.py
project/drv/: hd44780.hpp  led.hpp
project/hal/: common.hpp  hal.hpp  register.hpp
project/intf/: gpio.hpp
project/src/: common.mk  main.cpp  main.h  makefile  startup.s  stm32f0xx_hal_msp.c
stages/: common.mk  makefile
stages/05_performance/mix/test/: CMakeLists.txt
(+203 files in other folders)
